--- a/style.css
+++ b/style.css
@@ -98,14 +98,24 @@ nav li:hover {
 .section2text>h2 {
     color: #B3BC00;
     font-style: italic;
+    font-size: 26px;
+    font-weight: 500;
+    line-height: 31px;
 }
 
 .section2text>h5 {
     color: white;
+    font-size: 17px;
+    font-style: italic;
+    font-weight: 500;
+    line-height: 20px;
 }
 
 .section2text>p {
     color: white;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 24px;
 }
 
 
@@ -114,8 +124,9 @@ nav li:hover {
 .note {
     color: white;
     font-style: italic;
-
+   font-size: 13px;
     font-weight: 200;
+    line-height: 19px;
 }
 
 .yellowcontainer {
@@ -130,13 +141,18 @@ nav li:hover {
     justify-content: space-evenly;
 
 }
-
+.yellowcontainer>h2{
+    font-style: italic;
+}
 .yellowcontainer button {
     padding: 6px;
     background-color: black;
     color: #B3BC00;
     border-radius: 10px;
-  
+}
+.yellowcontainer button:hover{
+    background-color: #ffffff;
+    color: black;
 }
 
 
